2006-03-21  Kentaro Sato <kentaro@ranvis.com>
	* timidity/aq.c: Made use of free-on-exit thingie.
	* timidity/instrum.c: Reverted needless r1.24 changes.
	* timidity/resample.c: Reverted gauss_table to be realloc'ed to allow
	  interfaces to change N-order dynamically. No leaks.
	* timidity/timidity.c: Reverted r1.173 changes around mblock.
	* libarc/arc.c: Better path separators skipping.

2006-03-19  Stas Sergeev <stsp@aknet.ru>

	* timidity/timidity.c (main): dynamic allocation of
	  dynamic_lib_root
	* interface/server_c.c: save CPU power

2006-02-04  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* configure.in doc/ja_JP.eucJP/README.w32
	* timidity/Makefile.am windrv/Makefile.am windrv/timiditydrv.cpp
	* windrv/timiditydrv.def: timiditydrv.dll can comple with digital Mars
	* timidity/portaudio_a.c: enable WRD with portaudio.
	* timidity/playmidi.c interface/rtsyn_common.c timidity/instrum.c
	* timidity/readmidi.c: fix unfreed memory.

2006-01-29  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
	
	* timidity/playmidy.c: export reet_midi();
	* interface/rtsyn_common.c: bugfix
	* timidity/portaudio_a.c: latency changes by interface charactor.

2006-01-28  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	Fixes of memory leak (checked with win_and dumb win_gui)
	* interface/w32g.h interface/w32g_mag.c interface/w32g_mag.h 
	* interface/w32g_playlist.c interface/w32g_subwin.c interface/w32g_subwin.h
	* interface/w32g_utl.c interface/w32g_utl.h libarc/arc.c
	* timidity/aq.c timidity/aq.h timidity/instrum.c timidity/instrum.h
	* timidity/playmidi.c timidity/readmidi.c timidity/readmidi.h
	* timidity/recache.c timidity/recache.h timidity/resample.c
	* timidity/resample.h timidity/sffile.c timidity/sndfont.c
	* timidity/timidity.c timidity/wrdt.c windrv/timiwp_timidity.c

	* interface/rtsyn_common.c: not free_global_mblock() bitween sound;

2006-01-25  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* windrv/mmddk.h: Added. LGPL version.
	* windrv/Makefile.am